# forgegod

./: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONVENTIONS.md  LICENSE  README.es.md  README.md  SECURITY.md  deepresearch_forgegod_auditor_planner.md  pyproject.toml  vercel.json
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
deepresearch/: DEEPRESEARCH.md  RUN_DEEPRESEARCH.md
docs/: AUDIT_2026-04-07.md  CLI_MOCK_PARITY_HARNESS_2026-04-08.md  CNAME  GLM_CODEX_HARNESS_2026-04-08.md  HARNESS_EVALS_2026-04-10.md  MASCOT_RESEARCH_2026-04-07.md  MINIMAX_2026-04-12.md  MOCK_PARITY_HARNESS_2026-04-08.md  OBSIDIAN_INTEGRATION_PLAN_2026-04-17.md  OPENAI_SURFACES_2026-04-10.md  OPERATIONS.md  STRICT_SANDBOX_SETUP.md  WEB_RESEARCH_2026-04-07.md  WEB_RESEARCH_2026-04-11.md  WEB_RESEARCH_2026-04-17_MULTI_AGENT_SURFACES.md  WEB_RESEARCH_2026-04-17_OPENCLAW_HERMES_INTEGRATIONS.md  cli_mock_parity_scenarios.json  index.html  mock_parity_scenarios.json  robots.txt  sitemap.xml
docs/examples/: glm_codex_coding_plan.toml  harness_evals_v1.json  harness_evals_v2.json
forgegod/: __init__.py  __main__.py  adversary.py  agent.py  audit.py  benchmark.py  budget.py  cli.py  cli_ux.py  coder.py  config.py  contributing.py  design.py  doctor.py  effort_gate.py  evals.py  hive.py  i18n.py  integrations.py  json_utils.py  loop.py  memory.py  memory_agent.py  models.py  native_auth.py  obsidian.py  onboarding.py  parallelism.py  planner.py  researcher.py  review_artifacts.py  reviewer.py  router.py  sandbox.py  security.py  shortcut_detector.py  sica.py  sota_monitor.py  subagents.py  taste.py  (+4 more)
forgegod/benchmark_scaffold/: pyproject.toml  server.py  utils.py
forgegod/testing/: __init__.py  mock_openai_service.py
forgegod/tools/: __init__.py  filesystem.py  git.py  mcp.py  shell.py  skills.py  web.py
scripts/: mock_openai_service.py  run_cli_mock_parity_harness.py  run_mock_parity_harness.py  run_stress_tests.py  selfimprove.sh  smoke_glm_codex_harness.py
showcase/smoothrevenue-build/: .gitignore  README.md  _audit_check.py  _audit_schema.py  _check.py  _check_a5.py  _check_contact_form_keys.py  _check_contrast.py  _check_hardcoded.py  _check_i18n.py  _check_i18n_full.py  _check_schema.py  _fix_schema.py  _gen.py  _test_i18n_contact.py  _test_schema_audit.py  _test_schema_secondary_pages.py  _validate_secondary_schemas.py  _verify_jsonld.py  _verify_schemas.py  app.js  effort.md  i18n_en.json  i18n_es.json  impressum.html  index.html  llms.txt  prd.json  prd_audit.json  prd_audit_isolated.json  privacy.html  styles.css  taste.md  terms.html
showcase/tarot-cleanroom/: .eslintrc.json  .gitignore  AGENTS.md  DESIGN.md  README.md  cleanup-obsolete.ps1  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  taste.md  tsconfig.json  vitest.config.ts
site/: index.html
tests/: test_agent.py  test_agent_auto_research.py  test_approval.py  test_audit_bridge.py  test_autodream.py  test_benchmark.py  test_budget.py  test_cli_audit.py  test_cli_auth.py  test_cli_integrations.py  test_cli_loop.py  test_cli_mock_parity.py  test_cli_permissions.py  test_cli_plan.py  test_cli_run.py  test_cli_ux.py  test_coder.py  test_config.py  test_contributing.py  test_deepseek.py  test_design.py  test_effort.py  test_evals.py  test_gemini.py  test_hive.py  test_kimi.py  test_loop_audit.py  test_memory.py  test_memory_integration.py  test_mock_parity_harness.py  test_models.py  test_native_auth.py  test_obsidian.py  test_onboarding.py  test_openai_codex.py  test_parallelism_recommender.py  test_permissions.py  test_planner.py  test_researcher.py  test_review_artifacts.py  (+10 more)
tests/stress/: __init__.py  conftest.py  (+6 more)
(+54 files in other folders)
