[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgegod"
version = "0.1.0"
description = "Multi-model autonomous coding engine. Local + Cloud. 24/7."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "ForgeGod Contributors" }]
keywords = ["ai", "coding", "agent", "autonomous", "multi-model", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer[all]>=0.15",
    "httpx>=0.28",
    "pydantic>=2.11",
    "rich>=14",
    "openai>=1.82",
    "gitpython>=3.1",
    "toml>=0.10",
    "aiofiles>=24.1",
    "json-repair>=0.44",
    "ddgs>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.52"]
dotenv = ["python-dotenv>=1.0"]
taste = ["taste-agent>=0.1.0"]
effort = ["effort-agent>=0.1.0"]
all = ["anthropic>=0.52", "python-dotenv>=1.0", "taste-agent>=0.1.0", "effort-agent>=0.1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "ruff>=0.11"]

[project.scripts]
forgegod = "forgegod.cli:app"
fg = "forgegod.cli:app"

[project.urls]
Homepage = "https://github.com/waitdeadai/forgegod"
Repository = "https://github.com/waitdeadai/forgegod"

[tool.setuptools.packages.find]
include = ["forgegod*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"forgegod/memory.py" = ["E501"]  # SQL strings + data tuples exceed 100 chars
"forgegod/agent.py" = ["E501"]  # SOTA 2026 research-injection lines exceed 100 chars
"forgegod/subagents.py" = ["E501"]  # research-aware prompt strings exceed 100 chars
"forgegod/cli.py" = ["E501"]  # research command output lines exceed 100 chars
"forgegod/hive.py" = ["E501"]  # pre-existing long prompt lines

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["stress: stress tests — run with pytest -m stress"]
